syntax = "proto3";

package proxy;

enum Layer {
  LAYER_UNSPECIFIED = 0;
  LAYER_4 = 4;
  LAYER_7 = 7;
}

message Interface {
  uint32 source_port = 1;
  uint32 target_port = 2;
  Layer layer = 3;
}

message Config {
  string target_host = 1;
  repeated Interface interfaces = 2;
  string project_id = 3;
  JWTMethod jwt_method = 4;
}

message JWTMethod {
  oneof method {
    string certificate = 1;
    string secret = 2;
  }
}
