syntax = "proto3";

package api.v1.authentication;

message Token {
  string access_token = 1;
  string refresh_token = 2;
}
